--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,32 @@
 # ORCCA
 # University of Colorado 
 
-
 get_filename_component(dirName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(EXE_NAME ${dirName} CACHE STRING "Name of executable to be created.")
 
-
-if (${CMAKE_MINOR_VERSION} EQUAL 0 AND NOT APPLE)
+if (${CMAKE_MINOR_VERSION} EQUAL 0 AND NOT APPLE) # if true, running on a CCAR computer
 	set(CMAKE_C_COMPILER /usr/local/gcc/bin/gcc CACHE STRING "C Compiler" FORCE)
 	set(CMAKE_CXX_COMPILER /usr/local/gcc/bin/g++ CACHE STRING "C++ Compiler" FORCE)
 else()
 	message("This is not a CCAR computer")
 endif()
 
+# Check what version of the compiler is installed
+execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion
+                OUTPUT_VARIABLE GCC_VERSION)
+message("GCC version is " ${GCC_VERSION})
 
-if (APPLE)
-	set(CMAKE_C_COMPILER /usr/local/Cellar/gcc/6.3.0_1/bin/gcc-6 CACHE STRING "C Compiler" FORCE)
-	set(CMAKE_CXX_COMPILER /usr/local/Cellar/gcc/6.3.0_1/bin/g++-6 CACHE STRING "C++ Compiler" FORCE)
+if (GCC_VERSION VERSION_LESS 4.7) # if true, either running on a CCAR computer or a Mac (Clang has messed-up version IDs)
+		if (NOT APPLE) # If NOT APPLE, then running on a CCAR computer
+        	set(CMAKE_CXX_FLAGS "-std=c++0x")
+        else() # Else running on a MAC. Will attempt to switch compiler to get the OMP-friendly GCC 6.3.0_1 from Homebrew
+        	if(EXISTS /usr/local/Cellar/gcc/6.3.0_1/bin/) 
+	        	set(CMAKE_C_COMPILER /usr/local/Cellar/gcc/6.3.0_1/bin/gcc-6 CACHE STRING "C Compiler" FORCE)
+				set(CMAKE_CXX_COMPILER /usr/local/Cellar/gcc/6.3.0_1/bin/g++-6 CACHE STRING "C++ Compiler" FORCE)
+			endif()
+        endif()
+    else() # Running on a proper Linux machine
+    	set(CMAKE_CXX_FLAGS "-std=c++11")
 endif()
 
 
@@ -32,34 +42,19 @@ endif()
 cmake_minimum_required(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.0)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/source/cmake)
 
+# Compiler flags
 add_definitions(-Wall -O2)
+
+# Include directories
 include_directories(include)
 include_directories(external/include)
 
-
-set(CMAKE_CXX_FLAGS "-std=c++11")
-
-
-
-# Check what version of the compiler is installed
-execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion
-                OUTPUT_VARIABLE GCC_VERSION)
-message("GCC version is " ${GCC_VERSION})
-if (GCC_VERSION VERSION_LESS 4.7)
-        set(CMAKE_CXX_FLAGS "-std=c++0x")
-endif()
-
-
-
 # Find Boost
-# set(Boost_USE_STATIC_LIBS OFF) 
-# set(Boost_USE_MULTITHREADED ON)  
-# set(Boost_USE_STATIC_RUNTIME OFF) 
 set(BOOST_ROOT /usr/local/Cellar/boost/1.63.0/)
 find_package(Boost COMPONENTS filesystem system) 
 if (Boost_FOUND)
 	include_directories(${Boost_INCLUDE_DIRS}) 
-else()
+else() # This corresponds to a personal setting. The first statement should be sufficient to find BOOST provided it is installed
 	include_directories(/usr/local/Cellar/boost/1.60.0_2/include) 
 	set(Boost_LIBRARY_DIRS "/usr/local/Cellar/boost/1.60.0_2/lib")
 endif()
@@ -69,6 +64,7 @@ find_package(Armadillo REQUIRED)
 include_directories(${ARMADILLO_INCLUDE_DIRS})
 
 # Find OpenMP
+# This is not mandatory. If not found, the pragmas will simply be ignored (may have to comment out #include "omp.h")
 find_package(OpenMP)
 if(OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -93,7 +89,7 @@ endif()
 # 			"/usr/local/lib/libassimp.so")
 # endif()
 
-# Fortran compiler, needed on Linux/Ubuntu by Armadillo
+# Fortran compiler, required by Armadillo on Linux/Ubuntu
 if(UNIX AND NOT APPLE AND ${CMAKE_MINOR_VERSION} GREATER 0)
 	find_library(GFORTRAN_LIBRARY gfortran
 	    PATHS /usr/lib/gcc/x86_64-linux-gnu/5/ /usr/lib/gcc/x86_64-redhat-linux/4.4.7/32/)
@@ -104,7 +100,6 @@ endif()
 add_executable(${EXE_NAME}
 source/main.cpp
 source/ShapeModel.cpp
-# source/DynamicAnalyses.cpp
 source/ShapeModelImporter.cpp
 source/Facet.cpp
 source/Edge.cpp
@@ -115,14 +110,7 @@ source/RefFrame.cpp
 source/RigidBodyKinematics.cpp
 source/FrameGraph.cpp
 source/Filter.cpp
-# source/RefTransform.cpp
-# source/VoxelGrid.cpp
-# source/VoxelNode.cpp
-# source/Voxel.cpp
 include/ShapeModel.hpp
-# include/DynamicAnalyses.hpp
-# include/Densities.hpp
-
 include/ShapeModelImporter.hpp
 include/Facet.hpp
 include/Edge.hpp
@@ -136,17 +124,11 @@ include/FrameGraph.hpp
 include/Filter.hpp
 external/source/GNUPlot.cpp
 external/include/GNUPlot.h
-
-# include/RefTransform.hpp
-# include/OMP_flags.hpp
-# include/VoxelGrid.hpp
-# include/VoxelNode.hpp
-# include/Voxel.hpp
 )
 
+# Linking
 set(library_dependencies
 ${ARMADILLO_LIBRARIES}
 ${Boost_LIBRARIES})
-
 target_link_libraries(${EXE_NAME} ${library_dependencies})
 
