switching back to HO3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ include/PC.hpp
 include/FilterArguments.hpp
 include/PointNormal.hpp
 include/Constants.hpp
+include/ICPException.hpp
 external/source/GNUPlot.cpp
 external/include/GNUPlot.h
 )
