started working on ShapeFitter (triangles) and kinematic chain

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-build/            
+build/
+saved/            
 *.zip             
 *.pyc
 *.pdf            
-volume_dif.txt
-surface_dif.txt  
 focal_plane_loc.txt             
-           
+volume_dif.txt
+surface_dif.txt           
 
