--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -140,29 +140,31 @@ endif()
 add_library(${LIB_NAME} SHARED
 ${SOURCE_PATH}/BBox.cpp
 ${SOURCE_PATH}/Bezier.cpp
+${SOURCE_PATH}/ControlPoint.cpp
+${SOURCE_PATH}/DynamicAnalyses.cpp
 ${SOURCE_PATH}/Element.cpp
 ${SOURCE_PATH}/Facet.cpp
+${SOURCE_PATH}/Filter.cpp
 ${SOURCE_PATH}/FrameGraph.cpp
+${SOURCE_PATH}/ICP.cpp
+${SOURCE_PATH}/Interpolator.cpp
 ${SOURCE_PATH}/KDTree_pc.cpp
 ${SOURCE_PATH}/KDTree_shape.cpp
 ${SOURCE_PATH}/KDTree_control_points.cpp
 ${SOURCE_PATH}/Lidar.cpp
+${SOURCE_PATH}/PC.cpp
 ${SOURCE_PATH}/PointNormal.cpp
 ${SOURCE_PATH}/Ray.cpp
 ${SOURCE_PATH}/RefFrame.cpp
+${SOURCE_PATH}/ShapeFitter.cpp
+${SOURCE_PATH}/ShapeFitterBezier.cpp
+${SOURCE_PATH}/ShapeFitterTri.cpp
 ${SOURCE_PATH}/ShapeModel.cpp
 ${SOURCE_PATH}/ShapeModelBezier.cpp
 ${SOURCE_PATH}/ShapeModelImporter.cpp
 ${SOURCE_PATH}/ShapeModelTri.cpp
-${SOURCE_PATH}/ControlPoint.cpp
-${SOURCE_PATH}/Filter.cpp
 ${SOURCE_PATH}/RK.cpp
-${SOURCE_PATH}/DynamicAnalyses.cpp
 ${SOURCE_PATH}/Wrappers.cpp
-${SOURCE_PATH}/Interpolator.cpp
-${SOURCE_PATH}/ICP.cpp
-${SOURCE_PATH}/PC.cpp
-${SOURCE_PATH}/ShapeFitter.cpp
 ${EXTERNAL_PATH}/Gnuplot/source/GNUPlot.cpp
 ${EXTERNAL_PATH}/CGAL_interface/source/CGAL_interface.cpp
 )
