--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -31,39 +31,57 @@ set (OMP_FRIENDLY_GCC_PATH /usr/local/Cellar/gcc/7.2.0/bin/)
 get_filename_component(dirName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 set(LIB_NAME ASPEN CACHE STRING "Name of library to be created.")
 
-if (${CMAKE_MINOR_VERSION} EQUAL 0 AND NOT APPLE) # if true, running on a CCAR computer (old CMAKE and RedHat)
-	set(CMAKE_C_COMPILER /usr/local/gcc/bin/gcc CACHE STRING "C Compiler" FORCE)
-	set(CMAKE_CXX_COMPILER /usr/local/gcc/bin/g++ CACHE STRING "C++ Compiler" FORCE)
-elseif(NOT APPLE)
-	# Not sure about this. Should work on a modern Ubuntu system
-	set(CMAKE_C_COMPILER /usr/bin/gcc CACHE STRING "C Compiler" FORCE)
-	set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE STRING "C++ Compiler" FORCE)
-    set (CMAKE_CXX_STANDARD 17)
-	message("This is a Linux machine. CMAKE_CXX_STANDARD 17 used")
+# if (${CMAKE_MINOR_VERSION} EQUAL 0 AND NOT APPLE) # if true, running on a CCAR computer (old CMAKE and RedHat)
+# 	set(CMAKE_C_COMPILER /usr/local/gcc/bin/gcc CACHE STRING "C Compiler" FORCE)
+# 	set(CMAKE_CXX_COMPILER /usr/local/gcc/bin/g++ CACHE STRING "C++ Compiler" FORCE)
+# elseif(NOT APPLE)
+# 	# Not sure about this. Should work on a modern Ubuntu system
+# 	set(CMAKE_C_COMPILER /usr/bin/gcc CACHE STRING "C Compiler" FORCE)
+# 	set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE STRING "C++ Compiler" FORCE)
+#     set (CMAKE_CXX_STANDARD 17)
+# 	message("This is a Linux machine. CMAKE_CXX_STANDARD 17 used")
 
-endif()
+# endif()
 
-# Check what version of the compiler is installed
-execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion
-                OUTPUT_VARIABLE GCC_VERSION)
-message("Default compiler is " ${CMAKE_C_COMPILER})
-message("Default ${CMAKE_C_COMPILER} version is " ${GCC_VERSION})
+# # Check what version of the compiler is installed
+# execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion
+#                 OUTPUT_VARIABLE GCC_VERSION)
+# message("Default compiler is " ${CMAKE_C_COMPILER})
+# message("Default ${CMAKE_C_COMPILER} version is " ${GCC_VERSION})
 
-# Set up the C++11 and OMP compile flags 
-if (GCC_VERSION VERSION_LESS 4.7 OR APPLE) # if true, either running on a CCAR computer or a Mac (Clang has messed-up version IDs)
-		if (NOT APPLE) # If NOT APPLE, then running on a CCAR computer. The proper compiler should have already been set
-        	set(CMAKE_CXX_FLAGS "-std=c++0x")
-        elseif(EXISTS ${OMP_FRIENDLY_GCC_PATH}) # Else running on a MAC. Will attempt to switch compiler to get the OMP-friendly GCC 6.3.0_1 from Homebrew
-        		message("Switching to OMP-friendly GCC ")
-	        	set(CMAKE_C_COMPILER ${OMP_FRIENDLY_GCC_PATH}gcc-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C Compiler" FORCE)
-				set(CMAKE_CXX_COMPILER ${OMP_FRIENDLY_GCC_PATH}g++-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C++ Compiler" FORCE)
-				set(CMAKE_CXX_FLAGS "-std=c++17")
+# if (GCC_VERSION VERSION_LESS 4.7 OR APPLE) # if true, either running on a CCAR computer or a Mac (Clang has messed-up version IDs)
+# 		if (NOT APPLE) # If NOT APPLE, then running on a CCAR computer. The proper compiler should have already been set
+#         	set(CMAKE_CXX_FLAGS "-std=c++0x")
+#         elseif(EXISTS ${OMP_FRIENDLY_GCC_PATH}) # Else running on a MAC. Will attempt to switch compiler to get the OMP-friendly GCC 6.3.0_1 from Homebrew
+        		
+#         		message("Switching to OMP-friendly GCC ")
+# 	        	set(CMAKE_C_COMPILER ${OMP_FRIENDLY_GCC_PATH}gcc-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C Compiler" FORCE)
+# 				set(CMAKE_CXX_COMPILER ${OMP_FRIENDLY_GCC_PATH}g++-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C++ Compiler" FORCE)
+# 				set(CMAKE_CXX_FLAGS "-std=c++17")
 			
-			else()
-				message(FATAL_ERROR "No OMP-compliant compiler was found on this mac. ")
-		endif()
+# 			else()
+# 				message(FATAL_ERROR "No OMP-compliant compiler was found on this mac. ")
+# 		endif()
+# endif()
+
+
+# Checking which version of GCC is running
+if(APPLE)
+	if(EXISTS ${OMP_FRIENDLY_GCC_PATH}) # Else running on a MAC. Will attempt to switch compiler to get the OMP-friendly GCC 6.3.0_1 from Homebrew
+		message("Switching to OMP-friendly GCC ")
+    	set(CMAKE_C_COMPILER ${OMP_FRIENDLY_GCC_PATH}gcc-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C Compiler" FORCE)
+		set(CMAKE_CXX_COMPILER ${OMP_FRIENDLY_GCC_PATH}g++-${OMP_FRIENDLY_GCC_MAJOR_VERSION} CACHE STRING "C++ Compiler" FORCE)
+
+	else()# no OMP-compliant compiler was found on this mac. 
+		message(FATAL_ERROR "No OMP-compliant compiler was found on this Mac.")
+	endif()
+else() # Running on Linux. Will switch back to compiler in /usr/local/bin
+		message("Switching to /usr/local/gcc ")
+    	set(CMAKE_C_COMPILER "/usr/local/bin/gcc" CACHE STRING "C Compiler" FORCE)
+		set(CMAKE_CXX_COMPILER "/usr/local/bin/g++" CACHE STRING "C++ Compiler" FORCE)
 endif()
 
+set (CMAKE_CXX_STANDARD 17)
 
 project(${LIB_NAME})
 
@@ -78,6 +96,9 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/source/cmake)
 
 # Compiler flags
 add_definitions(-Wall -O2)
+
+# Set up the C++17 and OMP compile flags 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 # Set path to include and source folders
 set(INCLUDES_PATH /Users/bbercovici/GDrive/CUBoulder/Research/code/ASPEN_gui_less/lib/include)
@@ -99,7 +120,7 @@ include_directories(${ARMADILLO_INCLUDE_DIRS})
 
 # Find RBK 
 find_package(RigidBodyKinematics REQUIRED)
-include_directories(${RBK_INCLUDE_DIRS})
+include_directories(${RBK_INCLUDE_DIR})
 
 # Find CGAL
 find_package(CGAL REQUIRED)
