--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -140,42 +140,42 @@ endif()
 # Add source files in root directory
 add_library(${LIB_NAME} SHARED
 source/BatchFilter.cpp
-${SOURCE_PATH}/BBox.cpp
-${SOURCE_PATH}/Bezier.cpp
-${SOURCE_PATH}/ControlPoint.cpp
-${SOURCE_PATH}/DynamicAnalyses.cpp
-${SOURCE_PATH}/Dynamics.cpp
-${SOURCE_PATH}/Element.cpp
-${SOURCE_PATH}/EllipsoidFitter.cpp
-${SOURCE_PATH}/EventFunction.cpp
-${SOURCE_PATH}/ExtendedKalmanFilter.cpp
-${SOURCE_PATH}/Facet.cpp
-${SOURCE_PATH}/Filter.cpp
-${SOURCE_PATH}/FrameGraph.cpp
-${SOURCE_PATH}/ICP.cpp
-${SOURCE_PATH}/Interpolator.cpp
-${SOURCE_PATH}/KDTree_pc.cpp
-${SOURCE_PATH}/KDTree_shape.cpp
-${SOURCE_PATH}/KDTree_control_points.cpp
-${SOURCE_PATH}/Lidar.cpp
-${SOURCE_PATH}/NavigationFilter.cpp
-${SOURCE_PATH}/Observations.cpp
-${SOURCE_PATH}/PC.cpp
-${SOURCE_PATH}/PointNormal.cpp
-${SOURCE_PATH}/Ray.cpp
-${SOURCE_PATH}/RefFrame.cpp
-${SOURCE_PATH}/SequentialFilter.cpp
-${SOURCE_PATH}/ShapeBuilder.cpp
-${SOURCE_PATH}/ShapeFitter.cpp
-${SOURCE_PATH}/ShapeFitterBezier.cpp
-${SOURCE_PATH}/ShapeFitterTri.cpp
-${SOURCE_PATH}/ShapeModel.cpp
-${SOURCE_PATH}/ShapeModelBezier.cpp
-${SOURCE_PATH}/ShapeModelImporter.cpp
-${SOURCE_PATH}/ShapeModelTri.cpp
-${SOURCE_PATH}/RK.cpp
-${EXTERNAL_PATH}/Gnuplot/source/GNUPlot.cpp
-${EXTERNAL_PATH}/CGAL_interface/source/CGAL_interface.cpp
+source/BBox.cpp
+source/Bezier.cpp
+source/ControlPoint.cpp
+source/DynamicAnalyses.cpp
+source/Dynamics.cpp
+source/Element.cpp
+source/EllipsoidFitter.cpp
+source/EventFunction.cpp
+source/ExtendedKalmanFilter.cpp
+source/Facet.cpp
+source/Filter.cpp
+source/FrameGraph.cpp
+source/ICP.cpp
+source/Interpolator.cpp
+source/KDTree_pc.cpp
+source/KDTree_shape.cpp
+source/KDTree_control_points.cpp
+source/Lidar.cpp
+source/NavigationFilter.cpp
+source/Observations.cpp
+source/PC.cpp
+source/PointNormal.cpp
+source/Ray.cpp
+source/RefFrame.cpp
+source/SequentialFilter.cpp
+source/ShapeBuilder.cpp
+source/ShapeFitter.cpp
+source/ShapeFitterBezier.cpp
+source/ShapeFitterTri.cpp
+source/ShapeModel.cpp
+source/ShapeModelBezier.cpp
+source/ShapeModelImporter.cpp
+source/ShapeModelTri.cpp
+source/RK.cpp
+external/Gnuplot/source/GNUPlot.cpp
+external/CGAL_interface/source/CGAL_interface.cpp
 )
 
 # Linking
