added vtk to cmake

--- a/Apps/ShapeReconstruction/CMakeLists.txt
+++ b/Apps/ShapeReconstruction/CMakeLists.txt
@@ -19,6 +19,11 @@ set (OMP_FRIENDLY_GCC_MAJOR_VERSION 7)
 # Path to OMP-Friendly GCC Compiler (will only be used on Mac OS systems)
 set (OMP_FRIENDLY_GCC_PATH /usr/local/Cellar/gcc/7.2.0/bin/)
 
+# Path to VTKConfig.cmake (not mandatory if VTK is installed at a standard location)
+set (VTK_PATH /usr/local/VTK-8.1.0/lib/cmake/vtk-8.1)
+
+
+
 ################################################################################
 #
 #
@@ -101,6 +106,13 @@ include_directories(${ARMADILLO_INCLUDE_DIRS})
 find_package(RigidBodyKinematics REQUIRED PATHS ${RBK_LOC})
 include_directories(${RBK_INCLUDE_DIR})
 
+
+
+# Find VTK Package
+find_package(VTK REQUIRED PATHS ${VTK_PATH})
+include(${VTK_USE_FILE})
+
+
 # Find CGAL
 find_package(CGAL REQUIRED)
 include( ${CGAL_USE_FILE} )
@@ -142,6 +154,7 @@ ${Boost_LIBRARIES}
 ${RBK_LIBRARY}
 ${CGAL_LIBRARIES} 
 ${CGAL_3RD_PARTY_LIBRARIES}
+${VTK_LIBRARIES}
 # ${SBGATCORE_LIBRARY}
 ${ASPEN_LIBRARY}
 )
